app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 30088
  selector:
    app: app
