ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inception-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app
              port:
                number: 8888
